--- a/css/main.scss
+++ b/css/main.scss
@@ -1,11 +1,26 @@
-$voltera-blue: #333E48;
-$voltera-green: #79ce00;
+@import './colors.scss';
 
 body {
-  color: #FFF;
+  color: $dark-font;
   font-family: 'Open Sans', sans-serif;
+  margin: 0px
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex-grow: 1;
+}
+
+h1, h2, h3, h4 {
+  color: $header-font;
+  font-weight: 400;
 }
 
 a {
+    color: $voltera-green;
     transition: all 0.1s ease-in-out 0s;
 }
