--- a/components/common/button.scss
+++ b/components/common/button.scss
@@ -1,20 +1,34 @@
 @import 'css/colors';
 
+.button.dark {
+  background-color: $voltera-blue;
+}
+
+.button.light {
+  background-color: $voltera-green;
+  color: $voltera-blue;
+}
+
+.button-wrapper {
+  display: inline;
+}
+
+.button.clear {
+  background-color: transparent;
+}
+
 .button {
+  color: $light-font;
   border-style: solid;
   border-color: $light-font;
   border-width: 1px;
   text-transform: uppercase;
   text-decoration: none;
   padding:1em 2em;
-  background-color: $voltera-blue;
+  font-weight: 600;
 }
 
-.button {
-   color: $light-font;
-   text-decoration: none;
-  }
-
 .button:hover {
-    color:$voltera-green;
+    color:$voltera-blue;
+    background-color: $light-font
   }
