--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,6 @@ body {
 }
 
 .container {
-  height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -15,9 +14,17 @@ body {
   flex-grow: 1;
 }
 
-h1, h2, h3, h4 {
-  color: $header-font;
+h1, h2 {
+  color: $dark-font;
   font-weight: 400;
+  text-align: center;
+}
+
+h3 {
+  color: $voltera-blue;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 0.9em;
 }
 
 a {
