Added testimonial, moved specs to a new page

--- a/components/cta/cta.scss
+++ b/components/cta/cta.scss
@@ -17,9 +17,9 @@ background-color: $voltera-green;
   flex: auto;
 }
 
-.cta h1 {
+.cta h2 {
   margin-bottom: 0px;
-  font-size: 28px;
+  text-align: left;
 }
 
 .cta p {
