--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -5,6 +5,8 @@
   height: $header-height;
   width: 100%;
   position: fixed;
+  z-index: 1;
+  //box-shadow: 0 1px 10px 0px;
 }
 
 .header-wrapper {
