--- a/components/specs/specs.scss
+++ b/components/specs/specs.scss
@@ -9,7 +9,7 @@ background-color: $grey-background;
 
 .specs-wrapper {
   margin: auto;
-  max-width: $specs-width;
+  max-width: $narrow-width;
   padding: 40px;
 }
 
