--- a/css/colors.scss
+++ b/css/colors.scss
@@ -1,16 +1,16 @@
-// Colors
-$voltera-blue: #333E48;
+// Colors in fonts and backgrounds.
+$voltera-blue: #333E48; // For light backgrounds.
 $voltera-green: #79ce00;
 $light-font: #FFF; // For dark backgrounds
-$dark-font: #384953; // For light backgrounds
 $soft-grey: #8A9093; // Used in footer
 
 
 
 // Background colors
 $grey-background: #e4e3e4;
+$white-background: #fff;
 
 // General Dimensions
 $max-width: 1200px;
+$narrow-width: 1100px;
 $header-height: 75px;
-$specs-width: 1000px;
