--- a/components/common/button/button.scss
+++ b/components/common/button/button.scss
@@ -22,6 +22,7 @@
   border-style: solid;
   border-color: $light-font;
   border-width: 1px;
+  border-radius: 2px;
   text-transform: uppercase;
   text-decoration: none;
   padding:0.9em 1.8em;
@@ -30,5 +31,5 @@
 
 .button:hover {
     color:$voltera-blue;
-    background-color: $light-font
+    background-color: $light-font;
   }
