--- a/components/common/header/header.scss
+++ b/components/common/header/header.scss
@@ -3,6 +3,7 @@
 .header {
   background-color: $voltera-blue;
   height: $header-height;
+  padding: 0px $horizontal-padding;
   width: 100%;
   position: fixed;
   z-index: 1;
@@ -24,9 +25,9 @@
 .header a {
   color: $light-font;
   text-decoration: none;
-  padding-left: 20px;
+  margin: 10px;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 0.8em;
   line-height: 20px;
   font-weight: 600;
 }
@@ -36,14 +37,16 @@
 }
 
 .header .links {
-  margin-right: 20px;
+  padding-right: $horizontal-padding;
 }
 
 .header .store-link {
   padding: 0.7em 1.0em;
   margin-left: 10px;
-  background-color: $voltera-green
+  background-color: $voltera-green;
+  border-radius: 2px;
 }
 .header .store-link:hover {
   color: $voltera-blue;
+  background-color: $light-font;
 }
