--- a/css/colors.scss
+++ b/css/colors.scss
@@ -7,10 +7,13 @@ $soft-grey: #8A9093; // Used in footer
 
 
 // Background colors
-$grey-background: #e4e3e4;
-$white-background: #fff;
+$grey-background: rgb(240,240,240);
 
 // General Dimensions
 $max-width: 1200px;
 $narrow-width: 1100px;
 $header-height: 75px;
+
+// Section paddings
+$horizontal-padding: 20px; // How close items can get to the edge.
+$vertical-padding: 40px // Distance between sections (usually a color change)
