--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,11 @@ body {
   flex-grow: 1;
 }
 
+// A Section is an element that spans the width of the page.
+.section {
+  padding: 40px 20px;
+}
+
 h1 {
   color: $voltera-blue;
   font-weight: 400;
