minified logo. Gave feature selector basic navigation. Youtube videos lazy loaded. Reduced size of hero image

--- a/components/awards/awards.scss
+++ b/components/awards/awards.scss
@@ -16,7 +16,7 @@ background-color: $grey-background;
 
 .awards img {
   filter: grayscale(0.9);
-  transition: all 0.1s ease-in-out 0s;
+  transition: all $t-time ease-in-out 0s;
   margin-left: 10px;
   margin-right: 10px;
 }
