--- a/components/featureSelector/feature/gallery/gallery.scss
+++ b/components/featureSelector/feature/gallery/gallery.scss
@@ -7,13 +7,9 @@ text-align: center;
 
 .gallery-wrapper {
   max-width: $max-width;
-  padding: 0px 20px;
+
   margin: auto;
   display: flex;
-  justify-content: space-between;
-}
-
-.gallery img {
-  width: 360px;
-  height: auto;
+  flex-wrap: wrap;
+  justify-content: center;
 }
