--- a/components/hero/hero.scss
+++ b/components/hero/hero.scss
@@ -1,7 +1,7 @@
 @import 'css/colors';
 
 .hero {
-  background-image: url('./../../pages/assets/hero.jpg');
+  background-image: url('./../../pages/assets/circuit-board-printer.jpg');
   background-position: bottom;
   height: 100vh;
 }
