--- a/components/common/bullet/bullet.scss
+++ b/components/common/bullet/bullet.scss
@@ -2,25 +2,25 @@
 
 .bullet {
 background-color: $grey-background;
+color: $voltera-blue;
 }
-.bullet a { //Acts as my wrapper.
+.bullet-wrapper {
   display: flex;
   align-items: center;
   padding: 10px;
   margin:10px;
   width: 280px;
   margin: auto;
-  color: $voltera-blue;
+
   border-radius: 2px;
-
+  cursor: pointer;
   text-decoration: none;
-  transition: all 0.2s ease-in-out 0s;
 }
 
-.bullet a:hover {
+.bullet:hover, .highlight {
   background-color: $voltera-green;
+  color: $light-font;
 }
-
 .bullet p {
   padding-left: 20px;
   margin: 0px;
@@ -31,7 +31,9 @@ background-color: $grey-background;
   width: 50px;
   height: 50px;
 }
-
 .bullet svg path {
   fill: $voltera-blue;
+}
+.bullet:hover svg path, .highlight svg path {
+    fill: $light-font;
 }
