--- a/components/featureSelector/selector/selector.scss
+++ b/components/featureSelector/selector/selector.scss
@@ -2,6 +2,11 @@
 
 .selector {
   padding: $vertical-padding $horizontal-padding;
+  border-color: $voltera-green transparent;
+  border-style: solid none;
+  border-width: 1px 0px;
+  background-color: darken($grey-background, 5);
+
 }
 
 .selector .selector-wrapper {
@@ -11,6 +16,7 @@
   justify-content: space-between;
   margin: auto;
   max-width: $max-width;
+
 }
 
 .selector .vertical {
