--- a/components/common/picture/picture.scss
+++ b/components/common/picture/picture.scss
@@ -1,7 +1,12 @@
 @import 'css/colors';
 
+.picture {
+  width: 360px;
+  margin: 0px $horizontal-padding;
+}
+
 .picture img {
   width: 360px;
   height: 203px;
-  margin: 0px $horizontal-padding;
+
 }
