--- a/components/gallery/gallery.scss
+++ b/components/gallery/gallery.scss
@@ -1,7 +1,7 @@
 @import 'css/colors';
 
 .gallery {
-background-color: $grey-background;
+background-color: $white-background;
 }
 .gallery-wrapper {
   margin: auto;
