--- a/css/colors.scss
+++ b/css/colors.scss
@@ -7,6 +7,7 @@ $soft-grey: #8A9093; // Used in footer
 
 
 // Background colors
+$white-background: #fff;
 $grey-background: rgb(240,240,240);
 
 // General Dimensions
