--- a/components/gallery/gallery.scss
+++ b/components/gallery/gallery.scss
@@ -23,14 +23,14 @@ background-color: $white-background;
 }
 
 .gallery img {
-  margin: 10px;
-  position: relative;
-  bottom: 0px;
-  cursor: pointer;
-  transition: all $t-time ease-in-out 0s;
-  border-radius: 5px;
+  // margin: 10px;
+  // position: relative;
+  // bottom: 0px;
+   cursor: pointer;
+  // transition: all $t-time ease-in-out 0s;
+   border-radius: 5px;
 }
 
 .gallery img:hover {
-  bottom: 3px;
+  // bottom: 3px;
 }
