--- a/css/main.scss
+++ b/css/main.scss
@@ -7,17 +7,23 @@ body {
 }
 
 h1 {
+  font-family: 'Raleway', sans-serif;
   color: $voltera-blue;
-  font-weight: 400;
+  font-weight: 300;
   text-align: center;
 }
 
 h2 {
+  font-family: 'Raleway', sans-serif;
   color: $voltera-blue;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 1.8em;
   text-align: center;
 
+}
+
+p {
+  line-height: 1.8em;
 }
 
 h3 {
