Request for quote complete. Emails being sent. Minor CSS cleanup in other areas

--- a/components/box/box.scss
+++ b/components/box/box.scss
@@ -17,10 +17,15 @@ background-color: $white-background;
 .box .box-content {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .box .description {
   padding: 0px $vertical-padding;
+  flex-basis: 500px;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 
