--- a/css/colors.scss
+++ b/css/colors.scss
@@ -11,6 +11,7 @@ $white-background: #fff;
 $grey-background: rgb(240,240,240);
 
 // General Dimensions
+$form-width: 550px;
 $max-width: 1200px;
 $narrow-width: 1100px;
 $header-height: 75px;
