--- a/components/request/common.scss
+++ b/components/request/common.scss
@@ -1,18 +1,15 @@
 @import 'css/colors';
 
-.quote-request {
+.request {
   background-color: $grey-background;
-
-// Centers the wrapper.
-padding: $vertical-padding $horizontal-padding;
-display: flex;
-justify-content: center;
-align-items: center;
-min-height: 500px;
+  padding: $vertical-padding $horizontal-padding;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 500px;
 }
 
-.quote-request-wrapper {
-
+.request-wrapper {
   width: $form-width;
   padding: $horizontal-padding $vertical-padding;
   background-color: $white-background;
@@ -20,7 +17,7 @@ min-height: 500px;
   box-shadow: 0px 0px 15px 0px black;
 }
 
-.quote-request h3 {
+.request h3 {
   border-bottom-style: solid;
   border-bottom-color: $voltera-green;
   border-bottom-width: 1px;
@@ -28,72 +25,88 @@ min-height: 500px;
   margin-top: 40px;
 }
 
-.quote-request .missing {
+.request .missing {
   color: red;
   text-align: center;
 }
 
-.quote-request input, .quote-request textarea, .quote-request select {
+.request .format {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.request .format p {
+  flex-basis: 240px;
+  text-align: right;
+  margin: 3px;
+}
+
+.request .button-wrapper {
+  margin: $vertical-padding 0px;
+  text-align: center;
+}
+
+
+.request input, .request textarea, .request select {
   border-style: solid;
   border-width: 1px;
   border-color: grey;
   border-radius: 3px;
 }
 
-.quote-request .text-input {
+.request .text-input {
   max-width: 130px;
 }
 
-.quote-request .format {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.quote-request .format p {
-  flex-basis: 240px;
-  text-align: right;
-  margin: 3px;
-}
-
-.quote-request .wide-wrapper {
+// Styling for elements that span the whole width.
+.request .wrapper {
   display: flex;
   align-items: center;
 }
-.quote-request .wide-text {
+
+.request .wide-text {
   flex-basis: 101px;
   text-align: right;
   margin: 3px;
-  flex-grow: 0px;
+  flex-grow: 0;
 }
-.quote-request .wide-select {
+
+.request .wide-select, .request .time-select {
   margin: 3px;
   flex-grow: 1;
   flex-shrink: 1;
 }
 
-.quote-request textarea {
+.request .wrapper p {
+  margin: 3px;
+}
+
+.request textarea {
   height: 40px;
   width: 100%;
 }
 
-.quote-request .button-wrapper {
-  margin: $vertical-padding 0px;
+.request .date-wrapper {
   text-align: center;
+  margin: $horizontal-padding 0px;
 }
 
+
+
 // Animation for the loader.
-.quote-request .loader-wrapper{
+.request .loader-wrapper{
   margin: auto;
   width: 200px;
 }
 
-.quote-request .loader,
-.quote-request .loader:after {
+.request .loader,
+.request .loader:after {
   border-radius: 50%;
   width: 10em;
   height: 10em;
 }
-.quote-request .loader {
+.request .loader {
   margin: auto;
   font-size: 10px;
   border-top: 1.1em solid $voltera-blue;
