--- a/components/common/customer/customer.scss
+++ b/components/common/customer/customer.scss
@@ -23,7 +23,7 @@
 
 .customer .quote.visible {
   opacity: 1;
-  transition: all 0.2s ease-in-out 0s;
+  transition: all $t-time-opacity ease-in-out 0s;
 }
 .customer .quote.hidden {
   opacity: 0;
