--- a/components/gallery/lightbox/lightbox.scss
+++ b/components/gallery/lightbox/lightbox.scss
@@ -12,12 +12,14 @@ z-index: 1;
 }
 .lightbox-wrapper {
   color: $light-font;
-  width: calc(100% - 40px);
-  height: calc(100% - 40px);
+  width: calc(100%);
+  height: calc(100%);
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px;
+  box-sizing: border-box;
+
 }
 .lightbox-content {
   display: flex;
@@ -36,40 +38,3 @@ z-index: 1;
   color: $light-font;
   text-align: left;
 }
-
-//
-//
-// @import 'css/colors';
-//
-// .lightbox {
-// background-color: rgba(0, 0, 0, 0.95);
-// position: fixed;
-// top: $header-height;
-// width: 100vw;
-// height: calc(100vh - 75px);
-// z-index: 1;
-//
-// }
-// .lightbox-wrapper {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   height: 100%;
-//
-//   margin: $horizontal-padding;
-//   color: $light-font;
-// }
-//
-// .lightbox img {
-//   width: 100%;
-// }
-//
-// .lightbox-content {
-//   max-width: 900px;
-//   flex-shrink: 1;
-// }
-//
-// .lightbox-content p, .lightbox-content h1 {
-//   color: $light-font;
-//   text-align: left;
-// }
