--- a/css/colors.scss
+++ b/css/colors.scss
@@ -23,3 +23,4 @@ $vertical-padding: 40px; // Distance between sections (usually a color change)
 
 // Transition time
 $t-time: 0.1s;
+$t-time-opacity: 0.2s;
