--- a/css/main.scss
+++ b/css/main.scss
@@ -40,6 +40,10 @@ a {
     transition: all $t-time ease-in-out 0s;
 }
 
+img {
+  border-radius: 5px;
+}
+
 .pull-center {
   text-align: center;
 }
