Made h2 bolder site wide, added larger padding

--- a/css/colors.scss
+++ b/css/colors.scss
@@ -19,6 +19,7 @@ $header-height: 75px;
 // Section paddings
 $horizontal-padding: 20px; // How close items can get to the edge.
 $vertical-padding: 40px; // Distance between sections (usually a color change)
+$large-padding: 100px;
 
 
 // Transition time
