--- a/components/common/customer/customer.scss
+++ b/components/common/customer/customer.scss
@@ -1,7 +1,11 @@
 @import 'css/colors';
 
 .customer {
-  background-color: $voltera-green;
+  background-color: $white-background;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+  z-index: 1;
+  position: relative;
+
 }
 
 .customer-wrapper {
