--- a/components/contact/contact.scss
+++ b/components/contact/contact.scss
@@ -40,7 +40,7 @@
 }
 
 .location-wrapper .address {
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .location-wrapper h2 {
@@ -49,6 +49,6 @@
 }
 
 .location-wrapper .address-wrapper {
-  margin: auto;
-  width: 240px;
+    margin: auto;
+    width: 240px;
 }
