--- a/components/main/hero/hero.scss
+++ b/components/main/hero/hero.scss
@@ -1,7 +1,7 @@
 @import 'css/colors';
 
 .hero {
-  background-image: url('./../../pages/assets/circuit-board-printer.jpg');
+  background-image: url('./circuit-board-printer.jpg');
   background-position: bottom;
   background-size: cover;
   height: calc(100vh - 75px);
