Moved in the box to product page, created workflow graphs for print and paste, fixed hamburger links, made dark grey a variable, improved how images are resized

--- a/src/components/common/header/header.scss
+++ b/src/components/common/header/header.scss
@@ -59,7 +59,7 @@
   background-color: $voltera-blue;
   top: $header-height;
   left: 0px;
-  bottom: 0px;
+  right: 0px;
 }
 
 .header ul {
@@ -68,7 +68,7 @@
 }
 
 .header li {
-  margin: $medium-padding;
+  margin: $small-padding;
 }
 
 .header .hamburger.open svg path {
