--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -3,7 +3,7 @@ $voltera-blue: #333E48; // For light backgrounds.
 $voltera-green: #79ce00;
 $light-font: #FFF; // For dark backgrounds
 $soft-grey: #8A9093; // Used in footer
-
+$dark-grey: rgb(23, 23, 23); //Used in product/feature pages.
 
 
 // Background colors
