--- a/src/components/common/minihero/minihero.scss
+++ b/src/components/common/minihero/minihero.scss
@@ -2,7 +2,7 @@
 
 
 .mini-hero-wrapper {
-  background-color: rgb(25,25,25);
+  background-color: $dark-grey;
   min-height: 400px;
   padding: 0px $small-padding;
 
