--- a/src/components/features/buyNow/buyNow.scss
+++ b/src/components/features/buyNow/buyNow.scss
@@ -1,32 +1,26 @@
 @import 'src/css/colors';
 
 .buyNow-wrapper {
-  background-color: $dark-grey;
+background-color: $voltera-green;
+padding: $medium-padding $small-padding;
 }
 
-.buyNow {
-  max-width: $narrow-width;
-  margin: auto;
-  padding: $large-padding $small-padding;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-
-  h1 {
-    color: $light-font;
-  }
+.buyNow h2 {
+  margin-bottom: 0px;
 }
 
-@media (max-width: $mobile-threshold) {
-  .buyNow {
-  justify-content: center;
-  }
-  .buyNow .buttons {
-    margin-top: $small-padding;
-  }
+.buyNow p {
+  margin-top: 0px;
+  font-size: 1.3em;
 }
 
 .buyNow .button {
-  margin-left: $small-padding;
+  margin-left: 20px;
+}
+
+
+@media (max-width: $mobile-threshold) {
+  .buyNow .buttons {
+    margin-top: $small-padding;
+  }
 }
