--- a/src/components/features/common.scss
+++ b/src/components/features/common.scss
@@ -1,9 +1,6 @@
 @import 'src/css/colors';
 
 .feature .column-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
   align-items: flex-start;
 }
 
@@ -12,16 +9,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: $medium-padding $small-padding;
-}
-
-// Print Probing.
-.feature .row-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-  padding: $medium-padding $small-padding;
 }
 
 .feature .description {
@@ -30,6 +17,51 @@
   flex-shrink: 1;
 }
 
+.feature .screenshot-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: $medium-padding 0px;
+}
+
+.feature .screenshot-wrapper .screenshot {
+  box-shadow: 0px 0px 10px 0px black;
+  transition: all $t-time-opacity  ease-in-out 0.3s;
+  opacity: 1;
+}
+
+.feature .screenshot-caption {
+  transition: all $t-time-opacity  ease-in-out 0s;
+  opacity: 1;
+}
+
+.feature .screenshot-wrapper .screenshot.hidden, .feature .screenshot-caption.hidden {
+  opacity: 0;
+  transition: none
+}
+
+.feature .screenshot-wrapper .navigation {
+  border-radius: 100%;
+  padding: 10px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  border-width: 1px;
+  border-style: solid;
+  border-color: $voltera-blue;
+  cursor: pointer;
+  transition: all $t-time ease-in-out 0s;
+  margin: $small-padding;
+  flex-shrink: 0;
+}
+.feature .screenshot-wrapper .navigation:hover {
+  background-color: $voltera-blue;
+  color: $light-font;
+}
+
+.feature .clips-wrapper {
+  padding: $medium-padding 0px;
+}
 
 @media (max-width: $mobile-threshold) {
   .feature img {
