--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,7 +11,6 @@ h1 {
   color: $voltera-blue;
   font-weight: 600;
   text-align: center;
-
 }
 
 h2 {
@@ -20,7 +19,6 @@ h2 {
   font-weight: 600;
   font-size: 1.8em;
   text-align: center;
-
 }
 
 p {
@@ -60,18 +58,42 @@ img {
   height: $header-height;
 }
 
+section {
+  max-width: $max-width;
+  margin: auto;
+  padding: $large-padding $small-padding;
+
+  h1 {
+    font-size: 2em;
+  }
+}
+
+
 .center-wide {
   max-width: $max-width;
   margin: auto;
 }
 
+.center-narrow {
+  max-width: $narrow-width;
+  margin: auto;
+}
+
 // Creates a centered flex row.
+
 .flex-row {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
+
+@media (max-width: $mobile-threshold) {
+  .flex-row {
+    justify-content: center;
+  }
+}
+
 
 .flex-column {
   display: flex;
