Big commit, still WIP, technology page exists, gallery is WIP

--- a/src/components/common/awards/awards.scss
+++ b/src/components/common/awards/awards.scss
@@ -1,7 +1,7 @@
 @import 'src/css/colors';
 
 .awards-wrapper {
-background-color: $white-background;
+background-color: $white;
 padding: $medium-padding $small-padding;
 }
 
