--- a/src/components/common/minihero/minihero.scss
+++ b/src/components/common/minihero/minihero.scss
@@ -10,14 +10,14 @@
   justify-content: center;
 
   h1 {
-    color: $light-font;
+    color: $white;
   }
 }
 
 .mini-hero {
   margin: auto;
   max-width: $narrow-width;
-  color: $light-font;
+  color: $white;
   text-align: center;
 }
 
