--- a/src/components/main/benefitsSelector/benefits.scss
+++ b/src/components/main/benefitsSelector/benefits.scss
@@ -1,6 +1,6 @@
 @import 'src/css/colors';
 .benefits-selector-wrapper {
-  background-color: $white-background;
+  background-color: $white;
   padding: $medium-padding $small-padding;
 }
 
