--- a/src/components/main/testimonial/testimonial.scss
+++ b/src/components/main/testimonial/testimonial.scss
@@ -3,7 +3,7 @@
 .testimonial-wrapper {
   background-color: $voltera-blue;
   padding: $medium-padding $small-padding;
-  color: $light-font;
+  color: $white;
 }
 
 .testimonial {
@@ -14,7 +14,7 @@
   display: flex;
 
   h3 {
-    color: $light-font;
+    color: $white;
   }
 }
 
