--- a/src/components/common/customer/customer.scss
+++ b/src/components/common/customer/customer.scss
@@ -1,10 +1,7 @@
 @import 'src/css/colors';
 
 .customer-wrapper {
-  background-color: $white-background;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
-  z-index: 1;
-  position: relative;
+  background-color: $white;
   padding: $medium-padding $small-padding;
 }
 
@@ -45,5 +42,14 @@
 
 .customer .navigation:hover {
   background-color: $voltera-blue;
-  color: $light-font;
+  color: $white;
+}
+
+@media (max-width: $mobile-threshold) {
+  .customer .navigation.left {
+    transform: rotate(90deg);
+  }
+  .customer .navigation.right {
+    transform: rotate(90deg);
+  }
 }
