--- a/src/components/common/explore/explore.scss
+++ b/src/components/common/explore/explore.scss
@@ -8,14 +8,14 @@
 .explore {
   margin: auto;
   max-width: $max-width;
-  color: $light-font;
+  color: $white;
 }
 
 .explore-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: $light-font;
+  color: $white;
 
   width: 280px;
   padding: $small-padding 0px;
@@ -25,6 +25,7 @@
   border-style: solid;
   border-width: 1px;
   border-radius: 5px;
+  border-color: $white;
   position:relative;
 }
 
@@ -41,7 +42,7 @@
 }
 
 .explore-button svg path {
-  fill: $light-font;
+  fill: $white;
 }
 
 .explore-button.highlight {
@@ -49,8 +50,21 @@
 }
 
 // When I hover or if it is selected.
-.explore-button:hover, .highlight {
-  color: $light-font;
+.explore-button:hover, .explore-button.highlight {
   background-color: $voltera-green;
-  border-color: $voltera-green;
+}
+
+@media (max-width: $mobile-threshold) {
+
+  .explore-button {
+      padding: 2px $small-padding;
+      border-style: none;
+      text-decoration: underline;
+      justify-content: flex-start;
+  }
+
+  .explore-button svg {
+    width: 30px;
+    height: 30px;
+  }
 }
