--- a/src/components/experiment/heroExperiment/heroExperiment.scss
+++ b/src/components/experiment/heroExperiment/heroExperiment.scss
@@ -1,36 +1,36 @@
 @import 'src/css/colors';
 
-.hero {
-  background-image: url('./circuit-board-printer.jpg');
-  background-position: bottom;
+.hero-experiment {
+  background-image: url('./dispensing-tool.jpg');
+  background-position:center;
   background-size: cover;
   height: calc(100vh - 75px);
 }
 
-.hero-wrapper {
+.hero-experiment-wrapper {
   margin: auto;
-  padding-top: 15vh;
+  padding-top: 25vh;
   padding-left: $small-padding;
-  padding-right: $small-padding;
+  padding-right: $medium-padding;
   max-width: $max-width;
-  height: 100%;
+  text-align: right;
 }
 
-.hero h1 {
+.hero-experiment h1 {
   color: $white;
   font-size: 3.0em;
   font-weight: 600;
   line-height: 50px;
   margin-bottom: 0px;
-  text-align: left;
+  text-align: right;
 }
-.hero p {
+.hero-experiment p {
   font-size: 1.5em;
   margin-top: 0px;
   margin-bottom: 40px;
   color: $white;
 }
 
-.hero .button {
-  margin-right: 20px;
+.hero-experiment .button {
+  //margin-right: 20px;
 }
