--- a/src/components/features/common.scss
+++ b/src/components/features/common.scss
@@ -15,13 +15,7 @@
   max-width: 500px;
   margin: $small-padding $small-padding;
   flex-shrink: 1;
-}
-
-.feature .screenshot-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: $medium-padding 0px;
+  text-align: justify;
 }
 
 .feature .screenshot-wrapper .screenshot {
@@ -33,6 +27,8 @@
 .feature .screenshot-caption {
   transition: all $t-time-opacity  ease-in-out 0s;
   opacity: 1;
+  margin-bottom: $medium-padding;
+
 }
 
 .feature .screenshot-wrapper .screenshot.hidden, .feature .screenshot-caption.hidden {
@@ -56,7 +52,7 @@
 }
 .feature .screenshot-wrapper .navigation:hover {
   background-color: $voltera-blue;
-  color: $light-font;
+  color: $white;
 }
 
 .feature .clips-wrapper {
@@ -67,5 +63,12 @@
   .feature img {
     width: 100%;
     height: auto;
+  }
+
+  .feature .screenshot-wrapper .navigation.left {
+    transform: rotate(90deg);
+  }
+  .feature .screenshot-wrapper .navigation.right {
+    transform: rotate(90deg);
   }
 }
