--- a/src/components/gallery/lightbox/lightbox.scss
+++ b/src/components/gallery/lightbox/lightbox.scss
@@ -4,14 +4,14 @@
 background-color: rgba(0, 0, 0, 0.95);
 position: fixed;
 top: $header-height;
+left: 0px;
 width: 100vw;
 height: calc(100vh - 75px);
 z-index: 1;
-
-
 }
+
 .lightbox-wrapper {
-  color: $light-font;
+  color: $white;
   width: calc(100%);
   height: calc(100%);
   display: flex;
@@ -19,12 +19,12 @@ z-index: 1;
   align-items: center;
   padding: 20px;
   box-sizing: border-box;
-
 }
+
 .lightbox-content {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   max-width: 800px;
   //max-height: 800px;
@@ -34,7 +34,16 @@ z-index: 1;
   max-width: 100%;
 }
 
-.lightbox p, .lightbox h1 {
-  color: $light-font;
+.lightbox h1 {
+  color: $white;
   text-align: left;
+  width: 100%;
+}
+.lightbox p {
+  margin-top: 0px;
+}
+
+.no-lightbox img {
+   width: 360px;
+   height: 203px;
 }
