--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -17,7 +17,7 @@
 }
 
 .banner h1 {
-  color: $light-font;
+  color: $white;
   text-align: right;
 }
 
@@ -26,7 +26,7 @@
   top: 75px;
   left: 320px;
   width: 300px;
-  color: $light-font;
+  color: $white;
 }
 
 .banner .subtitle {
@@ -34,7 +34,7 @@
   top: 230px;
   left: 75px;
   width: 300px;
-  color: $light-font;
+  color: $white;
 }
 
 .software {
