--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -79,8 +79,6 @@ section {
   margin: auto;
 }
 
-// Creates a centered flex row.
-
 .flex-row {
   display: flex;
   flex-wrap: wrap;
@@ -94,12 +92,8 @@ section {
   }
 }
 
-
-.flex-column {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
+.shadow-banner {
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+  z-index: 1;
+  position: relative;
 }
