pushing everything for alrizzle

--- a/src/components/common/button/button.scss
+++ b/src/components/common/button/button.scss
@@ -37,6 +37,7 @@
     color:$voltera-blue;
     background-color: $white;
     border-color: $voltera-blue;
+    text-decoration: none;
   }
 
   .button.white:hover {
