--- a/src/components/common/explore/explore.scss
+++ b/src/components/common/explore/explore.scss
@@ -1,7 +1,7 @@
 @import 'src/css/colors';
 
 .explore-wrapper {
-  background-color: $dark-grey;
+  background-color: $medium-grey;
   padding: $large-padding $small-padding;
 }
 
