--- a/src/components/technology/specs/specs.scss
+++ b/src/components/technology/specs/specs.scss
@@ -23,7 +23,7 @@ background-color: $white;
 }
 
 .specs .row.light {
-  background-color: darken($grey-background, 5);
+  background-color: darken($light-grey, 10);
 }
 
 .specs .category {
