--- a/src/components/technology/technology.scss
+++ b/src/components/technology/technology.scss
@@ -1,7 +1,7 @@
 @import 'src/css/colors';
 
 .banner-wrapper {
-  background-color: $dark-grey;
+  background-color: $medium-grey;
   border-bottom-color: $voltera-green;
   border-bottom-width: thin;
   border-bottom-style: solid;
