--- a/src/components/main/hero/hero.scss
+++ b/src/components/main/hero/hero.scss
@@ -19,7 +19,6 @@
 .hero h1 {
   color: $white;
   font-size: 3.0em;
-  font-weight: 600;
   line-height: 50px;
   margin-bottom: 0px;
   text-align: left;
@@ -33,4 +32,13 @@
 
 .hero .button {
   margin-right: 20px;
+}
+
+@media (max-width: $mobile-threshold) {
+  .hero h1 {
+    font-size: 2.0em;
+  }
+  .hero p {
+    font-size: 1.2em;
+  }
 }
